generator client {
  provider      = "prisma-client-js"
  output        = "../generated/prisma"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model DriverProfile {
  userId        String       @id @db.VarChar(255)
  name          String       @db.VarChar(255)
  email         String       @db.VarChar(255)
  phone         String       @db.VarChar(20)
  vehicleType   VehicleType  @default(MOTOBIKE) @map("vehicle_type")
  licensePlate  String       @map("license_plate") @db.VarChar(255)
  licenseNumber String       @map("license_number") @db.VarChar(255)
  status        DriverStatus @default(OFFLINE)
  rating        Decimal      @default(5.00) @db.Decimal(3, 2)
  balance       Decimal      @default(0.00) @db.Decimal(10, 2)
  lastLat       Float?       @map("last_lat")
  lastLng       Float?       @map("last_lng")
  createdAt     DateTime     @default(now()) @db.Timestamptz(6)
  updatedAt     DateTime     @default(now()) @updatedAt @db.Timestamptz(6)

  @@map("driver_profile")
}

enum VehicleType {
  MOTOBIKE
  BIKE
}

enum DriverStatus {
  OFFLINE
  ONLINE
  BUSY
}
